--- a/index.html
+++ b/index.html
@@ -64,20 +64,49 @@
           <form onsubmit="e => e.preventDefault()">
             <div class="mb-3">
               <label for="loginEmail" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="loginEmail" aria-describedby="loginEmailHelp" />
-              <div id="loginEmailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <input type="email" class="form-control" id="loginEmail" required />
             </div>
             <div class="mb-3">
               <label for="loginPass" class="form-label">Password</label>
-              <input type="password" class="form-control" id="loginPass" />
+              <input type="password" class="form-control" id="loginPass" required />
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <p class="mt-3">Belum Punya Akun? <a href="#" class="text-primary">Daftar</a></p>
+            <p class="mt-3">Belum Punya Akun? <a href="#daftarModal" class="text-primary" data-bs-toggle="modal">Daftar</a></p>
           </form>
         </div>
       </div>
     </div>
   </div>
+  <!-- End of login modal -->
+  
+  <!-- Daftar Modal -->
+  <div class="modal fade" id="daftarModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="loginModalLabel">Daftar</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+          <form onsubmit="e => e.preventDefault()">
+            <div class="mb-3">
+              <label for="daftarEmail" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="daftarEmail" aria-describedby="loginEmailHelp" required />
+              <div id="loginEmailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+              <label for="loginPass" class="form-label">Password</label>
+              <input type="password" class="form-control" id="loginPass" required />
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <p class="mt-3">Sudah Punya Akun? <a href="#loginModal" class="text-primary" data-bs-toggle="modal">Login</a></p>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End of daftar modal -->
+  
   <!-- End of Navbar here -->
 
   <!-- carosel here -->
@@ -179,21 +208,21 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" loading="lazy" />
+          <img src="img/jelvin.jpg" alt="Jelvin Krisna Putra" width="120" height="120" class="rounded-circle" loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
             </blockquote>
-            <figcaption class="blockquote-footer"><cite title="Source Title">Agustian Bonzar</cite></figcaption>
+            <figcaption class="blockquote-footer"><cite title="Source Title">Jelvin Krisna Putra</cite></figcaption>
           </figure>
         </div>
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" loading="lazy" />
+          <img src="img/neilsen.jpg" alt="Neilsen Nicholas Koma" width="120" height="120" class="rounded-circle" loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat menarik dan sangat intuitif</p>
             </blockquote>
-            <figcaption class="blockquote-footer"><cite title="Source Title">Agustian Bonzar</cite></figcaption>
+            <figcaption class="blockquote-footer"><cite title="Source Title">Neilsen Nicholas Koma</cite></figcaption>
           </figure>
         </div>
       </div>
