--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
               <input type="password" class="form-control" id="loginPass" required />
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <p class="mt-3">Belum Punya Akun? <a href="#daftarModal" class="text-primary" data-bs-toggle="modal">Daftar</a></p>
+            <p class="mt-3">Belum Punya Akun? <a href="#daftarModal" class="text-primary"
+                data-bs-toggle="modal">Daftar</a></p>
           </form>
         </div>
       </div>
     </div>
   </div>
   <!-- End of login modal -->
-  
+
   <!-- Daftar Modal -->
   <div class="modal fade" id="daftarModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -99,14 +100,15 @@
               <input type="password" class="form-control" id="loginPass" required />
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <p class="mt-3">Sudah Punya Akun? <a href="#loginModal" class="text-primary" data-bs-toggle="modal">Login</a></p>
+            <p class="mt-3">Sudah Punya Akun? <a href="#loginModal" class="text-primary"
+                data-bs-toggle="modal">Login</a></p>
           </form>
         </div>
       </div>
     </div>
   </div>
   <!-- End of daftar modal -->
-  
+
   <!-- End of Navbar here -->
 
   <!-- carosel here -->
@@ -151,13 +153,10 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-8 col-md-4 my-3" data-aos="fade-right">
-          <a href="#">
+          <a href="#uiuxmodal" data-bs-toggle="modal">
             <div class="card">
               <img src="img/myuiuxcard.png" class="card-img-top" alt="UI or UX course"
-              onmouseover="this.src='img/myuiuxcard.gif'"
-              onmouseout="this.src='img/myuiuxcard.png'"
-              loading="lazy"
-              />
+                onmouseover="this.src='img/myuiuxcard.gif'" onmouseout="this.src='img/myuiuxcard.png'" loading="lazy" />
               <div class="card-body">
                 <h5 class="card-title">UI / UX Design</h5>
                 <p class="card-text">Belajar Desain Interface dan Pengalaman User</p>
@@ -165,14 +164,33 @@
             </div>
           </a>
         </div>
+        <!-- UI UX card Modal -->
+        <div class="modal fade" id="uiuxmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">UI UX Design</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+                <div class="card">
+                  <img src="img/myuiuxcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <div class="card-body">
+                    <h5 class="card-title">UI / UX Design</h5>
+                    <p class="card-text">Belajar Desain Interface dan Pengalaman User</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of UI UX card modal -->
         <div class="col-8 col-md-4 my-3" data-aos="fade-up">
-          <a href="#">
+          <a href="#frontendmodal" data-bs-toggle="modal">
             <div class="card">
-              <img src="img/myfrontendcard.png" class="card-img-top" alt="UI or UX course" 
-               onmouseover="this.src='img/myfrontendcard.gif'"
-               onmouseout="this.src='img/myfrontendcard.png'"
-               loading="lazy"
-              />
+              <img src="img/myfrontendcard.png" class="card-img-top" alt="UI or UX course"
+                onmouseover="this.src='img/myfrontendcard.gif'" onmouseout="this.src='img/myfrontendcard.png'"
+                loading="lazy" />
               <div class="card-body">
                 <h5 class="card-title">Frontend</h5>
                 <p class="card-text">Belajar Implementasi Desain Interface</p>
@@ -180,14 +198,33 @@
             </div>
           </a>
         </div>
+        <!-- UI UX card Modal -->
+        <div class="modal fade" id="frontendmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Frontend</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+                <div class="card">
+                  <img src="img/myfrontendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <div class="card-body">
+                    <h5 class="card-title">Frontend</h5>
+                    <p class="card-text">Belajar Implementasi Desain Interface</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of UI UX card modal -->
         <div class="col-8 col-md-4 my-3" data-aos="fade-left">
-          <a href="#">
+          <a href="#backendmodal" data-bs-toggle="modal">
             <div class="card">
               <img src="img/mybackendcard.png" class="card-img-top" alt="UI or UX course"
-               onmouseover="this.src='img/mybackendcard.gif'"
-               onmouseout="this.src='img/mybackendcard.png'"
-               loading="lazy"
-              />
+                onmouseover="this.src='img/mybackendcard.gif'" onmouseout="this.src='img/mybackendcard.png'"
+                loading="lazy" />
               <div class="card-body">
                 <h5 class="card-title">Backend</h5>
                 <p class="card-text">Belajar Membuat Server dan API</p>
@@ -195,6 +232,27 @@
             </div>
           </a>
         </div>
+        <!-- UI UX card Modal -->
+        <div class="modal fade" id="backendmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Frontend</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+                <div class="card">
+                  <img src="img/mybackendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <div class="card-body">
+                    <h5 class="card-title">Backend</h5>
+                    <p class="card-text">Belajar Membuat Server dan API</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of UI UX card modal -->
       </div>
     </section>
     <!-- End of Card here -->
@@ -208,7 +266,8 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/jelvin.jpg" alt="Jelvin Krisna Putra" width="120" height="120" class="rounded-circle" loading="lazy" />
+          <img src="img/jelvin.jpg" alt="Jelvin Krisna Putra" width="120" height="120" class="rounded-circle"
+            loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
@@ -217,7 +276,8 @@
           </figure>
         </div>
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/neilsen.jpg" alt="Neilsen Nicholas Koma" width="120" height="120" class="rounded-circle" loading="lazy" />
+          <img src="img/neilsen.jpg" alt="Neilsen Nicholas Koma" width="120" height="120" class="rounded-circle"
+            loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat menarik dan sangat intuitif</p>
