--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
             <a class="nav-link text-black" href="#contact">Contact Us</a>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#loginModal">Sign
+            <button id="signinbutton" type="button" class="btn btn-success" data-bs-toggle="modal"
+              data-bs-target="#loginModal">Sign
               in</button>
+            <button id="logoutbutton" type="button" class="btn btn-danger d-none">Log Out</button>
           </li>
         </ul>
       </div>
@@ -61,7 +63,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
-          <form onsubmit="e => e.preventDefault()">
+          <form class="w-50" onsubmit="return doLogin()">
             <div class="mb-3">
               <label for="loginEmail" class="form-label">Email address</label>
               <input type="email" class="form-control" id="loginEmail" required />
@@ -70,6 +72,7 @@
               <label for="loginPass" class="form-label">Password</label>
               <input type="password" class="form-control" id="loginPass" required />
             </div>
+            <div id="loginAlert" class="alert alert-danger d-none" role="alert">Error</div>
             <button type="submit" class="btn btn-primary">Submit</button>
             <p class="mt-3">Belum Punya Akun? <a href="#daftarModal" class="text-primary"
                 data-bs-toggle="modal">Daftar</a></p>
@@ -89,16 +92,17 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
-          <form onsubmit="e => e.preventDefault()">
+          <form class="w-50" onsubmit="return doDaftar()">
             <div class="mb-3">
               <label for="daftarEmail" class="form-label">Email address</label>
               <input type="email" class="form-control" id="daftarEmail" aria-describedby="loginEmailHelp" required />
               <div id="loginEmailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="loginPass" class="form-label">Password</label>
-              <input type="password" class="form-control" id="loginPass" required />
+              <label for="daftarPass" class="form-label">Password</label>
+              <input type="password" class="form-control" id="daftarPass" required />
             </div>
+            <div id="daftarAlert" class="alert alert-danger d-none" role="alert">Error</div>
             <button type="submit" class="btn btn-primary">Submit</button>
             <p class="mt-3">Sudah Punya Akun? <a href="#loginModal" class="text-primary"
                 data-bs-toggle="modal">Login</a></p>
@@ -286,7 +290,7 @@
             <blockquote class="blockquote">
               <p>Pembelajaran sangat menarik dan sangat intuitif</p>
             </blockquote>
-            <figcaption class="blockquote-footer"><cite title="Source Title">Neilsen Nicholas Koma</cite></figcaption>
+            <figcaption class="blockquote-footer"><cite title="Source Title">Neilsen Nicholas Komah</cite></figcaption>
           </figure>
         </div>
       </div>
