--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <label for="loginPass" class="form-label">Password</label>
                 <input type="password" class="form-control" id="loginPass" required />
               </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="rememberLogin" />
+                <label class="form-check-label" for="rememberLogin">Remember Me</label>
+              </div>
               <div id="loginAlert" class="alert alert-danger d-none" role="alert">Error</div>
               <button type="submit" class="btn btn-primary">Submit</button>
               <p class="mt-3">Belum Punya Akun? <a href="#daftarModal" class="text-primary" data-bs-toggle="modal">Daftar</a></p>
@@ -95,6 +99,10 @@
               <div class="mb-3">
                 <label for="daftarPass" class="form-label">Password</label>
                 <input type="password" class="form-control" id="daftarPass" required />
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="rememberDaftar" />
+                <label class="form-check-label" for="rememberDaftar">Remember Me</label>
               </div>
               <div id="daftarAlert" class="alert alert-danger d-none" role="alert">Error</div>
               <button type="submit" class="btn btn-primary">Submit</button>
@@ -348,13 +356,13 @@
             <div class="mb-3" data-aos="zoom-out-up">
               <div id="contactUsSuccess" class="alert alert-success d-none" role="alert">Message Send Success!!!</div>
               <div id="contactUsFail" class="alert alert-danger d-none" role="alert">Message Send Failed!!!</div>
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input name="email" id="contactUsEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="" required />
+              <label for="contactUsEmail" class="form-label">Email address</label>
+              <input aria-label="input" name="email" id="contactUsEmail" type="email" class="form-control" aria-describedby="emailHelp" value="" required />
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3" data-aos="zoom-out-up">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-              <textarea name="message" id="contactUsMessage" class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+              <textarea aria-label="input" name="message" id="contactUsMessage" class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
             </div>
             <div class="row">
               <div class="col d-flex align-items-center">
